@@ -37,8 +37,8 @@ The following is a basic example of a configuration profile, named ``profile1``.
     "options": [
       "-Xmx2048m",
       "-Xms768m",
-      "-XX:PermSize=256m",
-      "-XX:MaxPermSize=1024m"
+      "-XX:MetaspaceSize=256m",
+      "-XX:MaxMetaspaceSize=1024m"
     ],
     "sys-properties": {
       "jna.library.path": "/opt/UShareSoft/uforge/lib"
@@ -102,7 +102,7 @@ When migrating Linux-based systems, UForge scans the filesystem.  In certain cas
         },
         "jvm": {
             "options": [
-                "-XX:MaxPermSize=512m",
+                "-XX:MaxMetaspaceSize=512m",
                 "-Xmx3096m",
                 "-Xms512m"
             ],
@@ -125,7 +125,7 @@ When migrating Linux-based systems, UForge scans the filesystem.  In certain cas
         },
         "jvm": {
             "options": [
-                "-XX:MaxPermSize=512m",
+                "-XX:MaxMetaspaceSize=512m",
                 "-Xmx3096m",
                 "-Xms512m"
             ],
@@ -148,7 +148,7 @@ When migrating Linux-based systems, UForge scans the filesystem.  In certain cas
         },
         "jvm": {
             "options": [
-                "-XX:MaxPermSize=512m",
+                "-XX:MaxMetaspaceSize=512m",
                 "-Xmx3096m",
                 "-Xms512m"
             ],
@@ -172,8 +172,8 @@ When migrating Linux-based systems, UForge scans the filesystem.  In certain cas
                 "-Xmx3096m",
                 "-XX:NewSize=256m",
                 "-XX:MaxNewSize=1024m",
-                "-XX:PermSize=64m",
-                "-XX:MaxPermSize=4096m"
+                "-XX:MetaspaceSize=64m",
+                "-XX:MaxMetaspaceSize=4096m"
             ],
             "sys-properties": {
                 "jna.library.path": "/opt/UShareSoft/uforge/lib"
